Update turn 3
28/05/2025
Config Spring Security
Fix APIs